--- a/app/views/chat_rooms/new.html.erb
+++ b/app/views/chat_rooms/new.html.erb
@@ -1,4 +1,7 @@
-<h1>Nueva sala de chat</h1>
+<div width="200px">
+	<img class="imagen" width="50px" height="50px" src="https://images.vexels.com/media/users/3/139911/isolated/preview/1afb4038427b2bd8edd275940aea269d-icono-de-servicio-de-chat-by-vexels.png" >
+	<h1 class="salachat">Nueva sala de chat</h1>
+</div>
 
 <%= form_for @chat_room do |f| %>
   <div class="form-group">
