--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="chat-bubble">
   <div class="card-block">
     <div class="row">
       <div class="col-md-1">
@@ -11,6 +11,8 @@
         </p>
       </div>
     </div>
+    <div class="chat-bubble-arrow-border"></div>
+  <div class="chat-bubble-arrow"></div>
 
   </div>
 </div>
