--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -3,20 +3,61 @@
   padding-bottom: 0.425rem;
   padding-top: 0.425rem;
 }
+.input-field{
+  width: 70%;
+}
+.salachat{
+ font-family: "Times New Roman", Times, serif;
+  color: #FF840F;
+}
+.registro{
+  background-color:orange;
+}
+.imagen{
+margin-top: 10px;
+  float: left;
+   border-radius:50%;
+}
+.material-icons{
+  background-color: #2bbbad;
+  border-radius: 30%;
+  font-size: 80px;
+  float: right;
+}
 
+  .logo-texto{
+    font-weight: bold;
+    padding-top: 18px;
+    color:  white;
+  }
+  .logo{
+align-content: center;
+width: 30%;
+height: 25%;
+}
+.collection .collection-item{
+  background-color: orange;
+color: white;
+}
+
+.cuadroEntrada{
+  background-color: #FF770F;
+  margin-top: 10%;
+}
 .navigation-bar{
-  background-color: white;
-  color: orange;
+  background-color: #FF770F;
 }
 .navbar-brand {
   font-size: 25px;
     
 }
 nav .brand-logo {
-  color: orange;
+  color: white;
 }
 body {
   font-family: Arial;
+  background-color: white;
+  color:black;
 }
 h1 {
   margin-top: 1.5rem;
@@ -46,4 +87,59 @@ footer {
 
 .log-in {
   max-width: 40%;
+}
+.input-field label {
+color: white;
+}
+a{
+  color: #FFECD1;
+}
+
+label {
+    color: white;
+}
+
+.chat-bubble {
+  background-color:orange;
+  border: 2px solid #000;
+  color: black;
+  display: inline-block;
+  font-size: 18px;
+  line-height: 1.3em;
+  margin: 10px 0 0 10px;
+  padding: 10px;
+  position: relative;
+  text-align: center;
+  width: 95%;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  -moz-box-shadow: 0 0 5px #FFF;
+  -webkit-box-shadow: 0 0 5px #FFF;
+  box-shadow: 0 0 5px #FFF;
+}
+.chat-bubble-arrow-border {
+  border-color: #000 transparent transparent transparent;
+  border-style: solid;
+  border-width: 10px;
+  bottom: -22px;
+  height: 0;
+  left: 30px;
+  position: absolute;
+  width: 0;
+}
+.chat-bubble-arrow {
+  border-color: orange transparent transparent transparent;
+  border-style: solid;
+  border-width: 10px;
+  bottom: -19px;
+  height: 0;
+  left: 30px;
+  position: absolute;
+  width: 0;
+}
+.chat-bubble span {
+    color: #000;
+    font-family: Verdana;
+    text-shadow: 1px 4px 1px #ABC;
 }
