--- a/app/views/chat_rooms/index.html.erb
+++ b/app/views/chat_rooms/index.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
+      <div class="collection">
+    <% @chat_rooms.each  do |c|  %>
+    <ul class="collection-item">
+      <img width="50px" height="50px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/User_icon_2.svg/220px-User_icon_2.svg.png" alt="">
+      <%= render c %>
+   </ul>
+   <% end %>
+      </div>
     <div class="col s6">
-      <h1>Salas de chat</h1>
-      <p class="lead"><%= link_to 'Nueva sala de chat', new_chat_room_path, class: 'btn btn-primary' %></p>
-    </div>
-
-    <div class="col s6">
-    <h3>Tópicos</h3>
-      <ul>
-        <%= render @chat_rooms %>
-      </ul>
+      <a href="<%= new_chat_room_path %>"><i class="material-icons" >chat</i></a> 
     </div>
 </div>
