--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -1,5 +1,7 @@
-<h1><%= @chat_room.title %></h1>
-
+<div>
+	<img class="imagen" width="50px" height="50px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/User_icon_2.svg/220px-User_icon_2.svg.png">
+<h2 class="salachat"><%= @chat_room.title %></h2>
+</div>
 <div id="messages" data-chat-room-id="<%= @chat_room.id %>">
   <%= render @chat_room.messages %>
 </div>
